task2/terraform/modules/securegroups/app_sg/app_sg.tf
resource "aws_security_group" "app-sg" {
  name        = "better-tera-abotyan-sg-app"
  description = "SG for app"
  vpc_id      = var.vpc_id


  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.cidr_block]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.cidr_block]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name"        = "dev-abotyan-sg-app"
    "description" = "better-tera-abotyan-sg-app"
  }
}
